I am very tired. Added text justification, fixed css, reformatted bullet's pages to make the code more readable.

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -1,86 +1,88 @@
 /* TODO:
- * Afifi (or anyone else) feel free to change things in here as long as you
- * notify the others first.
- */
+* Afifi (or anyone else) feel free to change things in here as long as you
+* notify the others first.
+*/
 
 /* NOTES ON COLOURS:
- * get colours from palette1.css, palette2.css is also there if the team
- * decides they don't like these colours.
- *
- * prim col 0:   main colour, use in for text.
- * secn col 1 _: use however you want.
- * secn col 2 _: use for navigation.
- * comp col _:   use for background.
- */
+* get colours from palette1.css, palette2.css is also there if the team
+* decides they don't like these colours.
+*
+* prim col 0:   main colour, use in for text.
+* secn col 1 _: use however you want.
+* secn col 2 _: use for navigation.
+* comp col _:   use for background.
+*/
 
 html {
-    font-size: 10px;
-    font-family: 'Verdana', sans-serif;
-    background-color: #000000;
+  font-size: 10px;
+  font-family: 'Verdana', sans-serif;
+  background-color: #888888;
 }
 
 body {
-    width: 1080px;
-    margin: 0 auto;
-    background-color: #8504AA;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
+  width: 1080px;
+  margin: 0 auto;
+  background-color: #FFEEFF;
+  padding: 0 80px 20px 80px;
+  border: 5px solid black;
 }
 
 h1 {
-    font-family: 'Courier New';
-    font-size: 60px;
-    letter-spacing: 1px;
-    text-align: center;
-    margin: 0;
-    padding: 20px 0;
-    /* prim col 0 */
-    color: #F0FE60;
-    text-shadow: 3px 3px 1px black;
+  font-family: 'Courier New';
+  font-size: 60px;
+  letter-spacing: 1px;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  /* prim col 0 */
+  color: #B536DA;
+  text-shadow: 3px 3px 1px black;
 }
 
 h2 {
-    font-family: 'Courier New';
-    font-size: 40px;
-    letter-spacing: 1px;
-    color: #F0FE60;
-    text-shadow: 2px 2px 1px black;
+  font-family: 'Courier New';
+  font-size: 40px;
+  letter-spacing: 1px;
+  color: #B536DA;
+  text-shadow: 2px 2px 1px black;
 }
 
 h3 {
-    font-size: 30px;
-    color: #F0FE60;
-    text-shadow: 2px 2px 1px black;
+  font-size: 30px;
+  color: #B536DA;
+  text-shadow: 1px 2px 2px #000000;
 }
 
 h4 {
-    font-size: 22px;
-    color: #F0FE60;
-    text-shadow: 1px 1px 1px black;
+  font-size: 22px;
+  color: #A526C0;
+  text-shadow: 1px 1px 1px #000000;
 }
 
 p, li, label {
-    font-size: 18px;
-    line-height: 2;
-    color: #F0FE60;
+  text-align: justify;
+  font-size: 18px;
+  line-height: 2;
+  color: #000000;
 }
 
 a {
-    color: #89D3EC;
+  color: #BA3BDF;
 }
 
 nav {
-    font-size: 24px;
-    line-heigt: 3;
-    letter-spacing: 1px;
-    text-align: center;
-    color: #36AED6;
+  font-size: 24px;
+  line-heigt: 3;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #A526C0;
 }
 
 table, th, td {
-  border: 1px solid #FF8300;
+  border: 1px solid #A526C0;
   margin: auto;
-  color: #FFC98F;
+  padding: auto;
+  color: #B536DA;
 }
 
 img {
@@ -101,6 +103,5 @@ code {
   display: block;
   white-space: pre-wrap;
   padding: 0 6px 6px 6px;
-  border: 5px solid #FF9E39;
+  border: 5px solid #B536DA;
 }
-
